--- a/test.css
+++ b/test.css
@@ -1,5 +1,8 @@
-.circle {
-    height: 50px;
+.dot {
     width: 50px;
+    height: 50px;
     border-radius: 50%;
+    background-color: #b42121;
+    cursor: move;
+    position: absolute;
 }
